exports[`test appends extra classes 1`] = `
<div className="input append me" style={{...}}>
<Label labelFor="2" labelName="myLabel" disabed={[undefined]} />
<textarea id="2" type={[undefined]} placeholder="myPlaceholder" name="myName" className="input classes" disabled={[undefined]} onBlur={[Function]} onFocus={[Function]} onChange={[Function]} style={{...}} rows={10} defaultValue={{...}} />
</div>
`;

exports[`test can hide the label 1`] = `
<div className="input" style={{...}}>
<textarea id="2" type={[undefined]} placeholder="myPlaceholder" name="myName" className="input classes" disabled={[undefined]} onBlur={[Function]} onFocus={[Function]} onChange={[Function]} style={{...}} rows={10} defaultValue={{...}} />
</div>
`;

exports[`test has active state 1`] = `
<div className="input input--active" style={{...}}>
<Label labelFor="2" labelName="myLabel" disabed={[undefined]} />
<textarea id="2" type={[undefined]} placeholder="myPlaceholder" name="myName" className="input classes" disabled={[undefined]} onBlur={[Function]} onFocus={[Function]} onChange={[Function]} style={{...}} rows={10} defaultValue={{...}} />
</div>
`;

exports[`test has error state 1`] = `
<div className="input input--alert" style={{...}}>
<Label labelFor="2" labelName="myLabel" disabed={[undefined]} />
<textarea id="2" type={[undefined]} placeholder="myPlaceholder" name="myName" className="input classes" disabled={[undefined]} onBlur={[Function]} onFocus={[Function]} onChange={[Function]} style={{...}} rows={10} defaultValue={{...}} />
</div>
`;

exports[`test has focused state 1`] = `
<div className="input input--focused" style={{...}}>
<Label labelFor="2" labelName="myLabel" disabed={[undefined]} />
<textarea id="2" type={[undefined]} placeholder="myPlaceholder" name="myName" className="input classes" disabled={[undefined]} onBlur={[Function]} onFocus={[Function]} onChange={[Function]} style={{...}} rows={10} defaultValue={{...}} />
</div>
`;

exports[`test overrides with theme if present 1`] = `
<div className="override" style={{...}}>
<Label labelFor="2" labelName="myLabel" disabed={[undefined]} />
<textarea id="2" type={[undefined]} placeholder="myPlaceholder" name="myName" className="input classes" disabled={[undefined]} onBlur={[Function]} onFocus={[Function]} onChange={[Function]} style={{...}} rows={10} defaultValue={{...}} />
</div>
`;

exports[`test renderHepText returns when error and error text 1`] = `
<span
  className="input__status">
  error
</span>
`;

exports[`test renderHepText returns when status 1`] = `
<span
  className="input__status">
  some status
</span>
`;

exports[`test renders with props 1`] = `
<div className="input" style={{...}}>
<Label labelFor="2" labelName="myLabel" disabed={[undefined]} />
<textarea id="2" type={[undefined]} placeholder="myPlaceholder" name="myName" className="input classes" disabled={[undefined]} onBlur={[Function]} onFocus={[Function]} onChange={[Function]} style={{...}} rows={10} defaultValue={{...}} />
</div>
`;
